fix text overflow

--- a/client/components/feed/feed.component.scss
+++ b/client/components/feed/feed.component.scss
@@ -6,7 +6,7 @@
 	// left: 0;
 	// width: 100%;
 	// height: 100%;
-	white-space: nowrap;
+	// white-space: nowrap;
 	display: flex;
 	flex-direction: column;
 	// scroll-snap-type: y mandatory;
